# community-platform

./: .gitignore
core/: .env.example  Cargo.toml  README.md
core/.cargo/: config.toml
core/config/: default.toml  development.toml  local.toml  production.toml
core/crates/api/: Cargo.toml
core/crates/api/src/: lib.rs  main.rs  openapi.rs  routes.rs  state.rs
core/crates/api/src/dto/: common.rs  member.rs  mod.rs  tool.rs
core/crates/api/src/middleware/: auth.rs  mod.rs
core/crates/api/src/v1/: member.rs  mod.rs  tool.rs
core/crates/app/: Cargo.toml
core/crates/app/src/: lib.rs
core/crates/app/src/member/: login.rs  mod.rs  register.rs
core/crates/app/src/profession/: assign_decider.rs  mod.rs  update_profession_rate.rs
core/crates/app/src/service/: list_services.rs  mod.rs  publish_service.rs
core/crates/app/src/tool/: commands.rs  mod.rs  queries.rs
core/crates/app/src/transaction/: complete_transaction.rs  confirm_transaction.rs  create_transaction.rs  mod.rs
core/crates/domain/: Cargo.toml
core/crates/domain/src/: lib.rs
core/crates/domain/src/isu/: entity.rs  mod.rs  repository.rs  value_objects.rs
core/crates/domain/src/member/: entity.rs  mod.rs  repository.rs  value_objects.rs
core/crates/domain/src/profession/: entity.rs  mod.rs  repository.rs  value_objects.rs
core/crates/domain/src/service/: entity.rs  mod.rs  repository.rs
core/crates/domain/src/tool/: entity.rs  mod.rs  repository.rs  value_objects.rs
core/crates/domain/src/transaction/: entity.rs  mod.rs  repository.rs
core/crates/infra/: Cargo.toml
core/crates/infra/src/: lib.rs  tracing_setup.rs
core/crates/infra/src/persistence/: mod.rs
core/crates/infra/src/persistence/postgres/: member_repo.rs  mod.rs  pool.rs  tool_repo.rs
core/crates/infra/src/security/: mod.rs  password_hasher.rs
core/crates/shared/: Cargo.toml
core/crates/shared/src/: config.rs  constants.rs  error.rs  lib.rs
core/crates/shared/src/types/: id.rs  mod.rs
core/migrations/: 20240101000000_init.sql  20250102000000_split_tool_price.sql
docker/: docker-compose.example.yml  docker-compose.local.yml
ui/: .gitignore  AGENTS.md  Cargo.toml
