[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
# 依赖所有层
domain = { path = "../domain" }
app = { path = "../app" }
infra = { path = "../infra" }
shared = { path = "../shared" }

# Web 框架
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# 异步运行时
tokio = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 安全
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }

# 数据验证
validator = { workspace = true }

# 配置
dotenvy = { workspace = true }

# 错误处理
anyhow = { workspace = true }
