[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
# 依赖层
domain = { path = "../domain" }
infra = { path = "../infra" }
shared = { path = "../shared" }

# 异步运行时
tokio = { workspace = true }

# 日志
tracing = { workspace = true }

# 数值计算
rust_decimal = { workspace = true }

# UUID生成
uuid = { workspace = true }
chrono = { workspace = true }
