[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
# 依赖层
domain = { path = "../domain" }
app = { path = "../app" }
shared = { path = "../shared" }

# 数据库
sqlx = { workspace = true }

# 异步
tokio = { workspace = true }
async-trait = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
