[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
# 依赖层
domain = { path = "../domain" }
shared = { path = "../shared" }

# 数据库
sqlx = { workspace = true }

# 异步
tokio = { workspace = true }
async-trait = { workspace = true }

# 工具库
chrono = { workspace = true }
uuid = { workspace = true }

# 安全
argon2 = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
